log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-output-share
          emptyDir: {}
        - name: log-output-config
          configMap:
            name: log-output-config
            items:
            - key: "information.txt"
              path: "information.txt"
      containers:
        - name: log-output-writer
          image: fallmx/log-output:2.5
          volumeMounts:
          - name: log-output-share
            mountPath: /mnt/log-output-share
        - name: log-output-reader
          image: fallmx/log-output:2.5
          volumeMounts:
          - name: log-output-share
            mountPath: /mnt/log-output-share
          - name: log-output-config
            mountPath: /mnt/log-output-config
