log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 8082
