log-output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output
spec:
  hostnames:
    - localhost
  parentRefs:
  - name: dwk-cluster-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /log
    backendRefs:
    - name: log-output
      port: 8082
